minigpu_ffi/src/include/minigpu.h


typedef struct MGPUComputeShader MGPUComputeShader;
typedef struct MGPUBuffer MGPUBuffer;
typedef void (*MGPUCallback)(void);
EXPORT void mgpuInitializeContext();
EXPORT void mgpuInitializeContextAsync(MGPUCallback callback);
EXPORT void mgpuDestroyContext();
EXPORT MGPUComputeShader *mgpuCreateComputeShader();
EXPORT void mgpuDestroyComputeShader(MGPUComputeShader *shader);
EXPORT void mgpuLoadKernel(MGPUComputeShader *shader, const char *kernelString);
EXPORT int mgpuHasKernel(MGPUComputeShader *shader);
EXPORT MGPUBuffer *mgpuCreateBuffer(int bufferSize, int dataType);
EXPORT void mgpuDestroyBuffer(MGPUBuffer *buffer);
EXPORT void mgpuSetBuffer(MGPUComputeShader *shader, int tag,
                          MGPUBuffer *buffer);
EXPORT void mgpuCreateKernel(MGPUComputeShader *shader, int groupsX,
                             int groupsY, int groupsZ);
EXPORT void mgpuDispatch(MGPUComputeShader *shader, int groupsX, int groupsY,
                         int groupsZ);
EXPORT void mgpuDispatchAsync(MGPUComputeShader *shader, int groupsX,
                              int groupsY, int groupsZ, MGPUCallback callback);
EXPORT void mgpuReadAsyncInt8(MGPUBuffer *buffer, int8_t *outputData,
                                    size_t size, size_t offset,
                                    MGPUCallback callback);