minigpu_ffi/src/include/minigpu_external.h


struct MGPUComputeShader;
struct MGPUBuffer;
typedef struct MGPUComputeShader MGPUComputeShader;
typedef struct MGPUBuffer MGPUBuffer;
typedef enum {
    MGPU_EXTERNAL_CONTENT_TYPE_CPU = 0,
    MGPU_EXTERNAL_CONTENT_TYPE_D3D11_SHARED_HANDLE,
    MGPU_EXTERNAL_CONTENT_TYPE_METAL_IOSURFACE,
    MGPU_EXTERNAL_CONTENT_TYPE_DMABUF,
    MGPU_EXTERNAL_CONTENT_TYPE_AHARDWAREBUFFER,
    MGPU_EXTERNAL_CONTENT_TYPE_WEB_VIDEO_FRAME,
} MGPUExternalContentType;
typedef enum {
    MGPU_EXTERNAL_PIXEL_FORMAT_UNKNOWN = 0,
    MGPU_EXTERNAL_PIXEL_FORMAT_RGBA32,          
    MGPU_EXTERNAL_PIXEL_FORMAT_BGRA32,          
    MGPU_EXTERNAL_PIXEL_FORMAT_NV12,            
    MGPU_EXTERNAL_PIXEL_FORMAT_GRAY8,           
    MGPU_EXTERNAL_PIXEL_FORMAT_RGBA64_HALF,     
    MGPU_EXTERNAL_PIXEL_FORMAT_YUV420P_AS_NV12_PLANES,
    MGPU_EXTERNAL_PIXEL_FORMAT_YUV420P_AS_RGB_PLANES,
} MGPUExternalPixelFormat;
typedef struct {
    void    *data_ptr;          
    uint32_t width;             
    uint32_t height;            
    uint32_t stride_bytes;      
    uint32_t offset_bytes;      
    uint32_t subresource_index; 
    int      dmabuf_fd;         
    uint64_t drm_format_modifier; 
} MGPUExternalPlane;
typedef struct {
    int      sync_fd;             
    void    *d3d11_fence;         
    void    *metal_shared_event;  
    uint64_t metal_fence_value;   
} MGPUExternalFence;
typedef struct {
    MGPUExternalContentType content_type;   
    MGPUExternalPixelFormat pixel_format;   
    uint32_t                width;          
    uint32_t                height;         
    uint32_t                num_planes;     
    MGPUExternalPlane       planes[4];      
    MGPUExternalFence       fence;          
    int64_t                 timestamp_us;   
} MGPUExternalVideoBuffer;
typedef struct MGPUVideoTexture MGPUVideoTexture;
EXPORT int mgpuIsExternalContentTypeSupported(MGPUExternalContentType type);
EXPORT int mgpuIsExternalPixelFormatSupported(MGPUExternalPixelFormat fmt);
EXPORT MGPUVideoTexture* mgpuImportVideoFrame(const MGPUExternalVideoBuffer* buf);
EXPORT void mgpuSetVideoTexture(MGPUComputeShader* shader, int binding_slot,
                                MGPUVideoTexture* tex, uint32_t plane_index);
EXPORT void mgpuDestroyVideoTexture(MGPUVideoTexture* tex);
EXPORT MGPUBuffer* mgpuVideoTextureToRGBA(MGPUVideoTexture* tex);
typedef struct MGPUSharedOutputTexture MGPUSharedOutputTexture;
EXPORT MGPUSharedOutputTexture*
mgpuCreateSharedOutputTexture(uint32_t width, uint32_t height);
EXPORT void* mgpuSharedOutputTextureGetD3D11Handle(MGPUSharedOutputTexture* tex);
EXPORT void* mgpuSharedOutputTextureGetD3D11Texture(MGPUSharedOutputTexture* tex);
EXPORT void* mgpuCreateD3D11DeviceOnDawnAdapter(void);
EXPORT uint32_t mgpuSharedOutputTextureGetWidth(MGPUSharedOutputTexture* tex);
EXPORT uint32_t mgpuSharedOutputTextureGetHeight(MGPUSharedOutputTexture* tex);
EXPORT int mgpuVideoTextureBGRAToRGBASharedOutput(MGPUVideoTexture* src,
                                                  MGPUSharedOutputTexture* dst);
EXPORT int mgpuCopyBufferToSharedOutputTexture(MGPUBuffer* buf,
                                               MGPUSharedOutputTexture* dst);
EXPORT int mgpuCopyBufferF32ToSharedOutputTexture(MGPUBuffer* buf,
                                                  MGPUSharedOutputTexture* dst);
EXPORT void mgpuDestroySharedOutputTexture(MGPUSharedOutputTexture* tex);
EXPORT uint32_t mgpuSharedOutputTextureDebugReadFirstPixel(
        MGPUSharedOutputTexture* tex);
EXPORT uint32_t mgpuSharedOutputTextureDebugReadFirstPixelDawn(
        MGPUSharedOutputTexture* tex);