minigpu_ffi/lib/minigpu_ffi_bindings.dart

// ignore_for_file: camel_case_types
// ignore_for_file: prefer_double_quotes
// ignore_for_file: non_constant_identifier_names
// ignore_for_file: constant_identifier_names
// ignore_for_file: prefer_expression_function_bodies
// ignore_for_file: sort_constructors_first
// ignore_for_file: unused_element

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

/// Returns 1 if the current WebGPU device can import the given content type
/// (i.e. the required Dawn SharedTextureMemory feature is present), 0 otherwise.
@ffi.Native<ffi.Int Function(ffi.UnsignedInt)>(
    symbol: 'mgpuIsExternalContentTypeSupported')
external int _mgpuIsExternalContentTypeSupported(
  int type,
);

int mgpuIsExternalContentTypeSupported(
  MGPUExternalContentType type,
) =>
    _mgpuIsExternalContentTypeSupported(
      type.value,
    );

/// Returns 1 if Minigpu has a valid WGPUTextureFormat mapping for the given
/// pixel format AND the necessary device features are available, 0 otherwise.
@ffi.Native<ffi.Int Function(ffi.UnsignedInt)>(
    symbol: 'mgpuIsExternalPixelFormatSupported')
external int _mgpuIsExternalPixelFormatSupported(
  int fmt,
);

int mgpuIsExternalPixelFormatSupported(
  MGPUExternalPixelFormat fmt,
) =>
    _mgpuIsExternalPixelFormatSupported(
      fmt.value,
    );

/// Import an external video frame as a Minigpu video texture.
///
/// - For GPU content types: imports via Dawn SharedTextureMemory / importExternalTexture.
/// Begins GPU access (acquires keyed-mutex / fence).
/// - For CPU: allocates a WGPUTexture and uploads with wgpuQueueWriteTexture.
///
/// Returns NULL on failure (check log output for reason).
/// Caller must call mgpuDestroyVideoTexture() after GPU work is done.
@ffi.Native<
    ffi.Pointer<MGPUVideoTexture> Function(
        ffi.Pointer<MGPUExternalVideoBuffer>)>()
external ffi.Pointer<MGPUVideoTexture> mgpuImportVideoFrame(
  ffi.Pointer<MGPUExternalVideoBuffer> buf,
);

/// Bind plane [plane_index] of a video texture to a compute shader binding slot.
///
/// For packed formats (RGBA32, BGRA32, GRAY8, RGBA64_HALF): use plane_index 0.
/// For NV12: plane_index 0 = Y (R8Unorm), plane_index 1 = UV (Rg8Unorm).
/// For YUV420P_AS_RGB_PLANES: plane_index 0/1/2 = Y/U/V (each R8Unorm).
///
/// The binding corresponds to the @binding attribute in your WGSL shader.
@ffi.Native<
    ffi.Void Function(ffi.Pointer<MGPUComputeShader>, ffi.Int,
        ffi.Pointer<MGPUVideoTexture>, ffi.Uint32)>()
external void mgpuSetVideoTexture(
  ffi.Pointer<MGPUComputeShader> shader,
  int binding_slot,
  ffi.Pointer<MGPUVideoTexture> tex,
  int plane_index,
);

/// Release a video texture.
///
/// For SharedTextureMemory imports: ends GPU access (releases keyed-mutex /
/// fence), releases the WGPUTexture and WGPUSharedTextureMemory.
/// For CPU uploads: releases the WGPUTexture.
///
/// MUST be called AFTER any dispatch that reads the texture has completed.
/// (i.e. after mgpuDispatch returns, or inside the mgpuDispatchAsync callback.)
@ffi.Native<ffi.Void Function(ffi.Pointer<MGPUVideoTexture>)>()
external void mgpuDestroyVideoTexture(
  ffi.Pointer<MGPUVideoTexture> tex,
);

/// Convert a video texture (NV12 or YUV420P variants) to an RGBA8 MGPUBuffer
/// via an internal compute pass (BT.709 full-range color matrix).
///
/// For packed formats (RGBA32/BGRA32/GRAY8) this is a simple copy/expand.
///
/// Returns a new MGPUBuffer* (caller owns; destroy with mgpuDestroyBuffer).
/// Returns NULL on failure.
///
/// Note: this call is synchronous — it blocks until the GPU work is done.
@ffi.Native<ffi.Pointer<MGPUBuffer> Function(ffi.Pointer<MGPUVideoTexture>)>()
external ffi.Pointer<MGPUBuffer> mgpuVideoTextureToRGBA(
  ffi.Pointer<MGPUVideoTexture> tex,
);

/// Create a shared RGBA8 output texture of the given dimensions.
///
/// Returns NULL on non-Windows platforms or if the GPU does not support
/// the SharedTextureMemoryD3D12Resource feature, or on allocation failure.
///
/// Caller must call mgpuDestroySharedOutputTexture().
@ffi.Native<
    ffi.Pointer<MGPUSharedOutputTexture> Function(ffi.Uint32, ffi.Uint32)>()
external ffi.Pointer<MGPUSharedOutputTexture> mgpuCreateSharedOutputTexture(
  int width,
  int height,
);

/// Returns the Windows NT HANDLE that the D3D11 client should open via
/// ID3D11Device1::OpenSharedResource1(handle, IID_ID3D11Texture2D, ...).
///
/// The handle remains owned by the MGPUSharedOutputTexture; the D3D11 client
/// must not CloseHandle() it.  (Open the resulting ID3D11Texture2D and let
/// the COM ref-count manage that view's lifetime.)
///
/// Returns NULL on non-Windows platforms or for an invalid texture.
@ffi.Native<
    ffi.Pointer<ffi.Void> Function(ffi.Pointer<MGPUSharedOutputTexture>)>()
external ffi.Pointer<ffi.Void> mgpuSharedOutputTextureGetD3D11Handle(
  ffi.Pointer<MGPUSharedOutputTexture> tex,
);

/// Returns the underlying ID3D11Texture2D* for the shared output texture.
///
/// The texture lives on the same ID3D11Device returned by
/// mgpuCreateD3D11DeviceOnDawnAdapter(), so an external D3D11 client (e.g.
/// an FFmpeg encoder) can use this pointer directly without
/// OpenSharedResource1. Caller must NOT Release this pointer — its
/// lifetime is owned by the MGPUSharedOutputTexture.
///
/// Returns NULL on non-Windows platforms or for an invalid texture.
@ffi.Native<
    ffi.Pointer<ffi.Void> Function(ffi.Pointer<MGPUSharedOutputTexture>)>()
external ffi.Pointer<ffi.Void> mgpuSharedOutputTextureGetD3D11Texture(
  ffi.Pointer<MGPUSharedOutputTexture> tex,
);

/// Returns an AddRef'd ID3D11Device* on the SAME DXGI adapter as Dawn's
/// D3D12 device. The same cached device is used internally to back any
/// MGPUSharedOutputTexture we create. Caller is responsible for Release()
/// (or handing ownership to FFmpeg via av_hwdevice_ctx_init).
///
/// Returns NULL on non-Windows platforms.
@ffi.Native<ffi.Pointer<ffi.Void> Function()>()
external ffi.Pointer<ffi.Void> mgpuCreateD3D11DeviceOnDawnAdapter();

@ffi.Native<ffi.Uint32 Function(ffi.Pointer<MGPUSharedOutputTexture>)>()
external int mgpuSharedOutputTextureGetWidth(
  ffi.Pointer<MGPUSharedOutputTexture> tex,
);

@ffi.Native<ffi.Uint32 Function(ffi.Pointer<MGPUSharedOutputTexture>)>()
external int mgpuSharedOutputTextureGetHeight(
  ffi.Pointer<MGPUSharedOutputTexture> tex,
);

/// Run a BGRA->RGBA swizzle (or pure RGBA passthrough) compute pass that
/// reads from [src] (typically an imported miniav D3D11 texture) and writes
/// the result into [dst].
///
/// Blocks until the GPU work has completed; the D3D11 view of [dst] is then
/// safe to read.
///
/// Returns 1 on success, 0 on failure.
@ffi.Native<
    ffi.Int Function(
        ffi.Pointer<MGPUVideoTexture>, ffi.Pointer<MGPUSharedOutputTexture>)>()
external int mgpuVideoTextureBGRAToRGBASharedOutput(
  ffi.Pointer<MGPUVideoTexture> src,
  ffi.Pointer<MGPUSharedOutputTexture> dst,
);

/// Copy an RGBA8 GPU storage buffer (the output of a GpuEffect / compute
/// dispatch) into the shared output texture entirely on the GPU.  The
/// buffer must hold exactly width*height u32 pixels packed as RGBA8.
///
/// Returns 1 on success, 0 on failure.
@ffi.Native<
    ffi.Int Function(
        ffi.Pointer<MGPUBuffer>, ffi.Pointer<MGPUSharedOutputTexture>)>()
external int mgpuCopyBufferToSharedOutputTexture(
  ffi.Pointer<MGPUBuffer> buf,
  ffi.Pointer<MGPUSharedOutputTexture> dst,
);

/// Like mgpuCopyBufferToSharedOutputTexture but reads the source as
/// `array<f32>` with 4 floats per pixel (R,G,B,A in [0,1]).  Used by
/// visualizers (e.g. the spectrogram) that produce float colors directly.
///
/// Returns 1 on success, 0 on failure.
@ffi.Native<
    ffi.Int Function(
        ffi.Pointer<MGPUBuffer>, ffi.Pointer<MGPUSharedOutputTexture>)>()
external int mgpuCopyBufferF32ToSharedOutputTexture(
  ffi.Pointer<MGPUBuffer> buf,
  ffi.Pointer<MGPUSharedOutputTexture> dst,
);

/// Release all resources held by the shared output texture (WGPUTexture,
/// WGPUSharedTextureMemory, ID3D12Resource COM ref, NT HANDLE).
///
/// Must NOT be called while the D3D11 client still holds an
/// ID3D11Texture2D view of the underlying resource.
@ffi.Native<ffi.Void Function(ffi.Pointer<MGPUSharedOutputTexture>)>()
external void mgpuDestroySharedOutputTexture(
  ffi.Pointer<MGPUSharedOutputTexture> tex,
);

/// Debug-only: read the first pixel (BGRA8, packed as 0xAARRGGBB after Map)
/// of the shared output texture from the D3D11 side using the cached
/// Dawn-adapter D3D11 device. Useful to verify that Dawn's writes are
/// visible on the D3D11 consumer.
///
/// Returns the raw 32-bit pixel value, or 0xDEAD000N on failure (N is the
/// stage that failed, see implementation).
@ffi.Native<ffi.Uint32 Function(ffi.Pointer<MGPUSharedOutputTexture>)>()
external int mgpuSharedOutputTextureDebugReadFirstPixel(
  ffi.Pointer<MGPUSharedOutputTexture> tex,
);

/// Debug-only: read the first pixel from the Dawn (D3D12) side via
/// CopyTextureToBuffer + map.  Used to compare with the D3D11-side
/// readback above to determine which side sees stale data.
///
/// Returns the raw 32-bit pixel value, or 0xDEAD100N on failure (N is the
/// stage that failed, see implementation).
@ffi.Native<ffi.Uint32 Function(ffi.Pointer<MGPUSharedOutputTexture>)>()
external int mgpuSharedOutputTextureDebugReadFirstPixelDawn(
  ffi.Pointer<MGPUSharedOutputTexture> tex,
);

@ffi.Native<ffi.Void Function()>()
external void mgpuInitializeContext();

@ffi.Native<ffi.Void Function(MGPUCallback)>()
external void mgpuInitializeContextAsync(
  MGPUCallback callback,
);

@ffi.Native<ffi.Void Function()>()
external void mgpuDestroyContext();

@ffi.Native<ffi.Pointer<MGPUComputeShader> Function()>()
external ffi.Pointer<MGPUComputeShader> mgpuCreateComputeShader();

@ffi.Native<ffi.Void Function(ffi.Pointer<MGPUComputeShader>)>()
external void mgpuDestroyComputeShader(
  ffi.Pointer<MGPUComputeShader> shader,
);

@ffi.Native<
    ffi.Void Function(ffi.Pointer<MGPUComputeShader>, ffi.Pointer<ffi.Char>)>()
external void mgpuLoadKernel(
  ffi.Pointer<MGPUComputeShader> shader,
  ffi.Pointer<ffi.Char> kernelString,
);

@ffi.Native<ffi.Int Function(ffi.Pointer<MGPUComputeShader>)>()
external int mgpuHasKernel(
  ffi.Pointer<MGPUComputeShader> shader,
);

@ffi.Native<ffi.Pointer<MGPUBuffer> Function(ffi.Int, ffi.Int)>()
external ffi.Pointer<MGPUBuffer> mgpuCreateBuffer(
  int bufferSize,
  int dataType,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<MGPUBuffer>)>()
external void mgpuDestroyBuffer(
  ffi.Pointer<MGPUBuffer> buffer,
);

@ffi.Native<
    ffi.Void Function(
        ffi.Pointer<MGPUComputeShader>, ffi.Int, ffi.Pointer<MGPUBuffer>)>()
external void mgpuSetBuffer(
  ffi.Pointer<MGPUComputeShader> shader,
  int tag,
  ffi.Pointer<MGPUBuffer> buffer,
);

@ffi.Native<
    ffi.Void Function(
        ffi.Pointer<MGPUComputeShader>, ffi.Int, ffi.Int, ffi.Int)>()
external void mgpuCreateKernel(
  ffi.Pointer<MGPUComputeShader> shader,
  int groupsX,
  int groupsY,
  int groupsZ,
);

@ffi.Native<
    ffi.Void Function(
        ffi.Pointer<MGPUComputeShader>, ffi.Int, ffi.Int, ffi.Int)>()
external void mgpuDispatch(
  ffi.Pointer<MGPUComputeShader> shader,
  int groupsX,
  int groupsY,
  int groupsZ,
);

@ffi.Native<
    ffi.Void Function(ffi.Pointer<MGPUComputeShader>, ffi.Int, ffi.Int, ffi.Int,
        MGPUCallback)>()
external void mgpuDispatchAsync(
  ffi.Pointer<MGPUComputeShader> shader,
  int groupsX,
  int groupsY,
  int groupsZ,
  MGPUCallback callback,
);

@ffi.Native<
    ffi.Void Function(ffi.Pointer<MGPUBuffer>, ffi.Pointer<ffi.Int8>, ffi.Size,
        ffi.Size, MGPUCallback)>()
external void mgpuReadAsyncInt8(
  ffi.Pointer<MGPUBuffer> buffer,
  ffi.Pointer<ffi.Int8> outputData,
  int size,
  int offset,
  MGPUCallback callback,
);
